--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
     </div>
 
     <!-- CHATBOT-->    
-    <div class="circuloBot" id="bot">
+    <div class="circuloBot hidden" id="bot">
         <img src="./bot/bot1-close-chat.gif" alt="Imagen" class="imagenBot">
     </div>
     <div class="chat" id="chat">
