--- a/despachos.html
+++ b/despachos.html
@@ -620,8 +620,8 @@
     <!-- Fin info WiFi -->
 
     <!-- CHATBOT-->    
-    <div class="circuloBot hidden" id="bot">
-        <img src="./bot/bot1-close-chat.gif" alt="Imagen" class="imagenBot">
+    <div class="circuloBot" id="bot">
+        <img src="./bot/bot11-hello.gif" alt="Imagen" class="imagenBot">
     </div>
     <div class="chat" id="chat">
         <div class="chat-header">Logi-Chat 🗨️</div>
