--- a/tipeoWeb.html
+++ b/tipeoWeb.html
@@ -117,8 +117,8 @@
                     <button class="btn btn-dark" id="btnVolverAtras" type="button" title="Volver atrás" style="display: none;">
                         <i class="bi bi-arrow-return-left" style="font-size: 22px;"></i> Atrás
                     </button>
-                    <button class="btn btn-light" id="btnIniciarEscaneo" type="button">
-                        <i class="bi bi-clipboard-pulse" style="font-size: 22px; color: #a517be;"></i> Inciar Escaneo
+                    <button class="btn btn-light" id="btnIniciarEscaneo" type="button" data-bs-toggle="modal" data-bs-target="#modalDespacho">
+                        <i class="bi bi-clipboard-pulse" style="font-size: 22px; color: #a517be;"></i> Iniciar Escaneo
                     </button>
                 </div>                                                           
             </div>  
@@ -207,7 +207,25 @@
         <button class="btn btn-light btn-sm"><i class="bi bi-graph-up"></i></button>
       </div>
     </div>
-  
+
+    <!-- TABLA -->
+    <table class="table table-bordered table-striped">
+        <thead class="thead-dark">
+          <tr>
+            <th><i class="bi bi-calendar-event"></i> Fecha y hora</th>
+            <th><i class="bi bi-truck"></i> Logistica</th>
+            <th><i class="bi bi-link-45deg"></i> Seguimiento</th>
+            <th><i class="bi bi-box-seam"></i> Bultos</th>
+            <th><i class="bi bi-receipt"></i> Remito</th>
+            <th><i class="bi bi-cash"></i> Valor</th>
+            <th><i class="bi bi-info-circle"></i> Info</th>
+          </tr>
+        </thead>
+        <tbody id="tabla-despacho-body">
+        </tbody>
+      </table>
+      <!-- TABLA -->
+
   </div>  
 <!-- FIN CONTENEDORES TIPEO -->
 
@@ -232,6 +250,50 @@
     <a href="#" id="scrollToDown" class="btn btn-warning" style="display: none;">
         <i class="fas fa-arrow-down"></i>
     </a>
+
+    <!-- Modal -->
+    <div class="modal fade" id="modalDespacho" tabindex="-1" role="dialog" aria-labelledby="modalDespachoLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header sku-modal-header">
+            <h5 class="modal-title sku-modal-title" id="modalDespachoLabel">Agregar Datos de Despacho</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+            <form id="formDespacho">
+                <div class="mb-3">
+                <label for="inputRemito" class="form-label">Número de Remito</label>
+                <input type="text" class="form-control" id="inputRemito" required>
+                <div class="invalid-feedback">Remito inválido. Debe iniciar con 83, 89, 230, 231, 233 o 254 y tener entre 10 y 11 caracteres.</div>
+                </div>
+                <div class="mb-3">
+                <label for="inputEtiqueta" class="form-label">Número de Etiqueta</label>
+                <input type="text" class="form-control" id="inputEtiqueta" required>
+                <div class="invalid-feedback">Etiqueta inválida o formato desconocido.</div>
+                </div>
+                <div class="mb-3">
+                <label for="inputBultos" class="form-label">Número de Bultos</label>
+                <input type="number" class="form-control" id="inputBultos">
+                </div>
+                <div class="mb-3">
+                <label for="inputValor" class="form-label">Valor Declarado</label>
+                <input type="text" class="form-control" id="inputValor" required>
+                <div class="invalid-feedback">Valor inválido.</div>
+                </div>
+                <div class="mb-3">
+                <label for="inputLogistica" class="form-label">Logística</label>
+                <input type="text" class="form-control" id="inputLogistica" disabled>
+                </div>
+            </form>
+            </div>
+            <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+            <button type="button" class="btn btn-primary" id="btnAgregarDespacho">Agregar a tabla</button>
+            </div>
+        </div>
+        </div>
+  </div>
+  <!-- Modal -->
 
     <!-- Info WiFi -->
     <div id="notification-ios-wifi" class="notification-ios-wifi">
@@ -341,6 +403,7 @@
     <!-- BOT -->
     <script src="./js/firebase-init-Bot.js"></script>
     <script src="./js/bot.js"></script>
+    <script src="./js/tipeoWeb.js"></script>
     
 </body>
 </html>
