--- a/tipeoWeb.html
+++ b/tipeoWeb.html
@@ -221,6 +221,7 @@
         <th><i class="bi bi-receipt"></i> Remito</th>
         <th><i class="bi bi-cash"></i> Valor</th>
         <th><i class="bi bi-info-circle"></i> Info</th>
+        <th><i class="bi bi-trash3-fill"></i></th>
         </tr>
     </thead>
     <tbody id="tabla-despacho-body">
