--- a/tipeoWeb.html
+++ b/tipeoWeb.html
@@ -135,8 +135,11 @@
       <img src="./Img/andreani-mini.png" class="imagen-top-tipeo" alt="Andreani" />
       <div class="bloque-info-tipeo">
         <i class="bi bi-box-seam-fill icono-tipeo"></i>
-        <span class="numero-tipeo total-andreani"><i class="fas fa-spinner fa-spin"></i></span>
-      </div>
+        <span class="texto-etiquetas">Etiquetas:</span>
+        <span class="numero-tipeo total-andreani">
+          <i class="fas fa-spinner fa-spin"></i>
+        </span>
+      </div>      
       <div class="bloque-info-tipeo-doble">
         <div class="bloque-info-tipeo">
             <i class="bi bi-arrows-angle-expand icono-tipeo"></i>
@@ -145,6 +148,12 @@
           <div class="bloque-info-tipeo">
             <i class="bi bi-arrows-angle-contract icono-tipeo"></i>
             <span class="numero-tipeo total-paqueteria-andreani"><i class="fas fa-spinner fa-spin"></i></span>
+          </div>
+      </div>
+      <div class="bloque-info-tipeo-doble">
+          <div class="bloque-info-tipeo">
+            <i class="bi bi-bank icono-tipeo"></i>
+            <span class="numero-tipeo total-monto-andreani"><i class="fas fa-spinner fa-spin"></i></span>
           </div>
       </div>
       <div class="botones-tipeo">
@@ -159,11 +168,20 @@
       <img src="./Img/andesmar-mini.png" class="imagen-top-tipeo" alt="Andesmar" />
       <div class="bloque-info-tipeo">
         <i class="bi bi-box-seam-fill icono-tipeo"></i>
+        <span class="texto-etiquetas">Etiquetas:</span>
         <span class="numero-tipeo total-andesmar"><i class="fas fa-spinner fa-spin"></i></span>
       </div>
-      <div class="bloque-info-tipeo">
-        <i class="bi bi-boxes icono-tipeo"></i>
-        <span class="numero-tipeo total-bigger-andesmar"><i class="fas fa-spinner fa-spin"></i></span>
+      <div class="bloque-info-tipeo-doble">
+        <div class="bloque-info-tipeo">
+            <i class="bi bi-arrows-angle-expand icono-tipeo"></i>
+            <span class="numero-tipeo total-bigger-andesmar"><i class="fas fa-spinner fa-spin"></i></span>
+          </div>
+      </div>
+      <div class="bloque-info-tipeo-doble">
+          <div class="bloque-info-tipeo">
+            <i class="bi bi-bank icono-tipeo"></i>
+            <span class="numero-tipeo total-monto-andesmar"><i class="fas fa-spinner fa-spin"></i></span>
+          </div>
       </div>
       <div class="botones-tipeo">
         <button class="btn btn-light btn-sm"><i class="bi bi-envelope-fill"></i></button>
@@ -177,11 +195,20 @@
       <img src="./Img/oca-mini.png" class="imagen-top-tipeo" alt="OCA" />
       <div class="bloque-info-tipeo">
         <i class="bi bi-box-seam-fill icono-tipeo"></i>
+        <span class="texto-etiquetas">Etiquetas:</span>
         <span class="numero-tipeo total-oca"><i class="fas fa-spinner fa-spin"></i></span>
       </div>
-      <div class="bloque-info-tipeo">
-        <i class="bi bi-boxes icono-tipeo"></i>
-        <span class="numero-tipeo total-bigger-oca"><i class="fas fa-spinner fa-spin"></i></span>
+      <div class="bloque-info-tipeo-doble">
+        <div class="bloque-info-tipeo">
+            <i class="bi bi-arrows-angle-expand icono-tipeo"></i>
+            <span class="numero-tipeo total-bigger-oca"><i class="fas fa-spinner fa-spin"></i></span>
+          </div>
+      </div>
+      <div class="bloque-info-tipeo-doble">
+          <div class="bloque-info-tipeo">
+            <i class="bi bi-bank icono-tipeo"></i>
+            <span class="numero-tipeo total-monto-oca"><i class="fas fa-spinner fa-spin"></i></span>
+          </div>
       </div>
       <div class="botones-tipeo">
         <button class="btn btn-light btn-sm"><i class="bi bi-envelope-fill"></i></button>
@@ -195,11 +222,20 @@
       <img src="./Img/cds-mini.png" class="imagen-top-tipeo" alt="CDS" />
       <div class="bloque-info-tipeo">
         <i class="bi bi-box-seam-fill icono-tipeo"></i>
+        <span class="texto-etiquetas">Etiquetas:</span>
         <span class="numero-tipeo total-cds"><i class="fas fa-spinner fa-spin"></i></span>
       </div>
-      <div class="bloque-info-tipeo">
-        <i class="bi bi-boxes icono-tipeo"></i>
-        <span class="numero-tipeo total-bigger-cds"><i class="fas fa-spinner fa-spin"></i></span>
+      <div class="bloque-info-tipeo-doble">
+        <div class="bloque-info-tipeo">
+            <i class="bi bi-arrows-angle-expand icono-tipeo"></i>
+            <span class="numero-tipeo total-bigger-cds"><i class="fas fa-spinner fa-spin"></i></span>
+          </div>
+      </div>
+      <div class="bloque-info-tipeo-doble">
+          <div class="bloque-info-tipeo">
+            <i class="bi bi-bank icono-tipeo"></i>
+            <span class="numero-tipeo total-monto-cds"><i class="fas fa-spinner fa-spin"></i></span>
+          </div>
       </div>
       <div class="botones-tipeo">
         <button class="btn btn-light btn-sm"><i class="bi bi-envelope-fill"></i></button>
