--- a/tipeoWeb.html
+++ b/tipeoWeb.html
@@ -151,7 +151,7 @@
           </div>
       </div>
       <div class="bloque-info-tipeo-doble">
-          <div class="bloque-info-tipeo">
+          <div class="bloque-info-tipeo total-monto-contenedor">
             <i class="bi bi-bank icono-tipeo"></i>
             <span class="numero-tipeo total-monto-andreani"><i class="fas fa-spinner fa-spin"></i></span>
           </div>
@@ -178,7 +178,7 @@
           </div>
       </div>
       <div class="bloque-info-tipeo-doble">
-          <div class="bloque-info-tipeo">
+          <div class="bloque-info-tipeo total-monto-contenedor">
             <i class="bi bi-bank icono-tipeo"></i>
             <span class="numero-tipeo total-monto-andesmar"><i class="fas fa-spinner fa-spin"></i></span>
           </div>
@@ -205,7 +205,7 @@
           </div>
       </div>
       <div class="bloque-info-tipeo-doble">
-          <div class="bloque-info-tipeo">
+          <div class="bloque-info-tipeo total-monto-contenedor">
             <i class="bi bi-bank icono-tipeo"></i>
             <span class="numero-tipeo total-monto-oca"><i class="fas fa-spinner fa-spin"></i></span>
           </div>
@@ -232,7 +232,7 @@
           </div>
       </div>
       <div class="bloque-info-tipeo-doble">
-          <div class="bloque-info-tipeo">
+          <div class="bloque-info-tipeo total-monto-contenedor">
             <i class="bi bi-bank icono-tipeo"></i>
             <span class="numero-tipeo total-monto-cds"><i class="fas fa-spinner fa-spin"></i></span>
           </div>
