--- a/tipeoWeb.html
+++ b/tipeoWeb.html
@@ -251,7 +251,7 @@
     <thead class="thead-dark">
         <tr>
         <th><i class="bi bi-calendar-event"></i> Fecha y hora</th>
-        <th><i class="bi bi-truck"></i> Logistica</th>
+        <th><i class="bi bi-truck"></i></th>
         <th><i class="bi bi-link-45deg"></i> Seguimiento</th>
         <th><i class="bi bi-box-seam"></i> Bultos</th>
         <th><i class="bi bi-receipt"></i> Remito</th>
