--- a/tipeoWeb.html
+++ b/tipeoWeb.html
@@ -370,9 +370,7 @@
                     <button type="button" class="btn-danger btn-close" data-bs-dismiss="modal" aria-label="Close"><i class="bi bi-x-lg"></i></button>
                 </div>
                 <div class="modal-body">
-                    <div id="spinnerPorLogistica" class="spinner-border text-primary" role="status" style="display: none; margin: auto;">
-                        <span class="visually-hidden">Cargando...</span>
-                    </div>
+                    <div id="spinnerPorLogistica" class="spinner-border text-primary" role="status" style="display: none; margin: auto; width: 3rem; height: 3rem;"></div>                    
                     <div class="table-responsive" id="tabla-container-xLogistica" style="display: none;">
                         <table class="table table-bordered table-striped">
                             <thead class="thead-dark">
